[package]
name = "dump-unstable-api"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
build_helper = { path = "../build_helper" }
serde_json = "1"
# NOTE: intentionally doesn't use the in-tree rustdoc-json-types so that we're resiliant to breaking
# changes between beta and nightly (since tidy always uses stage 0 rustdoc).
rustdoc-types = "0.18"
syn = { version = "1", features = ["full"] }
